[project]
name = "heartbeat"
version = "0.1.0"
description = "Health check probe for services with Slack alerting"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "thepetk" }]
dependencies = ["httpx>=0.28"]

[project.scripts]
heartbeat = "heartbeat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heartbeat"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ty>=0.0.1a10",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["heartbeat"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
extra-paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["heartbeat"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
